Minor Bug Fix Set overflow for body as hidden

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body{
     width: 100vw;
     padding: 20px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 .outerbox{
     height: 80%;
